# winmerge

./: .gitignore  README.md
.github/workflows/: mac-release.yml  main.yml
csharp/: README.md  WinMerge.CrossPlatform.slnx
csharp/WinMerge.CrossPlatform/: Program.cs
mac/: CMakeLists.txt  README.md  build-mac.sh
mac/resources/: Info.plist  Info.plist.in
mac/src/core/: DiffEngine.cpp  DiffEngine.h  DiffResult.h  FileOperations.cpp  FileOperations.h  FolderCompareEngine.cpp  FolderCompareEngine.h  ThreeWayMergeEngine.cpp  ThreeWayMergeEngine.h
mac/src/ui/: AppDelegate.h  AppDelegate.mm  DiffTextView.h  DiffTextView.mm  DiffViewController.h  DiffViewController.mm  LineNumberRulerView.h  LineNumberRulerView.mm  main.mm
